--- a/programs/demr/Cargo.toml
+++ b/programs/demr/Cargo.toml
@@ -17,4 +17,9 @@ default = []
 
 [dependencies]
 anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
-anchor-spl = { version = "0.29.0" }
+anchor-spl = { version = "0.29.0", features = [
+    "spl-associated-token-account",
+    "spl-token",
+    "mpl-token-metadata",
+    "metadata",
+] }
